Fix minor alignment issue in home.erb

--- a/public/style.css
+++ b/public/style.css
@@ -24,16 +24,15 @@ html, body {
   background-color: rgba(0,0,0,0.6);
   color: #fff;
   margin-left: 80px;
-  margin-bottom: auto;Mark,
+  margin-bottom: auto;
   margin-right: auto;
 }
 
 #title-box {
   margin-top: 30px;
   margin-bottom: 30px;
-  min-width: 800px;
+  max-width: 800px;
   display: inline-block;
-  text-align: left;
   margin-left: 1em;
   border-left: #3af5ff 5px solid;
   transition: 0.5s;
@@ -61,14 +60,12 @@ html, body {
 #form {
   width: 90%;
   max-width: 850px;
-  min-height: 400px;;
+  min-height: 400px;
   margin-top: 100px;
-  display: block;
   display: block;
   margin-left: 80px;
   margin-bottom: auto;
   margin-right: auto;
-  padding-left: 10px;
   background-color: rgba(0,0,0,0.6);
 }
 
@@ -76,7 +73,7 @@ html, body {
   margin-top: 30px;
   margin-bottom: 30px;
   margin-left: 1em;
-  min-width: 800px;
+  max-width: 800px;
   display: inline-block;
   border-left: #3af5ff 5px solid;
   transition: 0.5s;
@@ -145,6 +142,5 @@ html, body {
 }
 
 #generate-button:focus {
-  opacity: 0;
   letter-spacing: 15px;
 }
